--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -25,6 +25,10 @@
     "react/no-unused-state": "off",
     "import/no-named-as-default": "off",
     "no-console": "off",
-    "react/no-unescaped-entities": "off"
+    "react/no-unescaped-entities": "off",
+    "import/no-unresolved": [
+      2,
+      { "caseSensitive": false }
+   ]
   }
 }
