--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -28,6 +28,16 @@
     "react/no-unescaped-entities": "off",
     "import/no-unresolved": "off",
     "no-unused-vars":"off",
-    "no-undef":"off"
+    "no-undef":"off",
+    "jsx-a11y/label-has-associated-control": [ "error", {
+      "required": {
+        "some": [ "nesting", "id"  ]
+      }
+    }],
+    "jsx-a11y/label-has-for": [ "error", {
+      "required": {
+        "some": [ "nesting", "id"  ]
+      }
+    }]
   }
 }
